# python-project-lvl4

./: .gitignore  Makefile  README.md  pyproject.toml
task_manager/: settings.py  urls.py
task_manager/main_page/: apps.py  urls.py  views.py
task_manager/templates/main_page/: main_page.html
