[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Pejnikov <ipejnikov@gmail.com>"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"
dj-database-url = "^0.5.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
